creditas-sf/force-app/main/default/objects/APITransactionErrorSummary__c/APITransactionErrorSummary__c.object-meta.xml
<CustomObject>
    <label>API Transaction Error Summary</label>
    <nameField>
        <displayFormat>APTR-{00000000}</displayFormat>
        <label>APITransactionErrorsSummary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Transaction Error Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>