creditas-sf/force-app/main/default/objects/APITransactionErrorSummary__c/fields/ErrorQuantity__c.field-meta.xml
<CustomField>
    <fullName>ErrorQuantity__c</fullName>
    <label>ErrorQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>